<resources>
    <string name="app_name">FutureFridgesApp</string>
    <string name="search_orders">Search Orders</string>
    <string name="search">Search</string>
    <string name="order_id">Order Id</string>
    <string name="supplier">Supplier</string>
    <string name="status">Status</string>
    <string name="action">Action</string>
    <string name="create_new_order">Create New Order</string>
    <string name="dashboard">Dashboard</string>
    <string name="edit">Edit</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="low_stock_title">Low Stock</string>
    <string name="low_stock_cheese">Cheese is low in stock.</string>
    <string name="low_stock_tomato">Tomato is low in stock.</string>
    <string name="expiry_date_title">Expiry Date Approaching</string>
    <string name="expiry_date_eggs">Eggs are expiring soon.</string>
    <string name="mark_as_resolved">Mark as resolved</string>
    <string name="see_date">See date</string>
    <string name="close_icon">✖</string>
    <string name="notification_scroll_description">Scrollable list of notifications</string>
    <string name="back_icon_description">Go back</string>
    <string name="profile_icon_description">Profile</string>
    <string name="delivery_id">Delivery ID</string>
    <string name="delivery_id_hint">Enter Delivery ID</string>
    <string name="confirm_delivery">Confirm delivery</string>
    <string name="log_out">Log out</string>
</resources>